[metadata]
name = velo
version = 0.0.1
summary = Velobstacles RESTful webapp
description-file = README.rst
author = Hadrien David
author_email = hadrien@ectobal.com

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

requires-dist =
    # 3rd-party dependencies
    gunicorn
    mongokit
    PasteScript
    pyramid
    pyramid_debugtoolbar
    pyramid_rest>=0.1.0
    python-magic

[files]
packages =
    velo
    velo.model
    velo.views
extra_files =
    setup.py

[nosetests]
where = velo/tests
match = ^test
nocapture = 1
cover-package = velo
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
