[metadata]
name = velo
version = 0.0.1
summary = Velobstacles RESTful webapp
description-file = README.rst
author = Hadrien David
author_email = hadrien@ectobal.com

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

requires-dist =
    pymongo==2.3
    mongokit==0.8.1
    PasteScript==1.7.5
    pyramid_debugtoolbar==1.0.3
    pyramid_rest==0.2.2
    python-magic==0.4.3

[files]
packages =
    velo
    velo.model
    velo.views
extra_files =
    setup.py

[nosetests]
where = velo/tests
match = ^test
nocapture = 1
cover-package = velo
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
