[metadata]
name = velo
version = 0.2
summary = Velobstacles RESTful webapp
description-file = README.rst
author = Hadrien David
author_email = hadrien@ectobal.com

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

requires-dist =
    onctuous
    PasteScript==1.7.5
    pymongo>=2.5.1
    pyramid_mongokit
    python-magic==0.4.3
    royal>=0.3


[files]
packages =
    velo
    velo.model
    velo.resources
    velo.tests
    velo.tests.functional
    velo.tests.unittests

extra_files =
    setup.py

[nosetests]
where = velo/tests
match = ^test
nocapture = 1
cover-package = velo
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
